--- a/jobs.html
+++ b/jobs.html
@@ -20,17 +20,17 @@ title: Jobs
 		<tr>
 			<td>FullStack Developer</td>
 			<td>Intern</td>
-			<td><a href="jobs/FullStackDeveloper(intern).pdf" class="button icon fa-download" target="_blank">Details</a></td>
+			<td><a href="jobs/FullStackDeveloper(Intern).pdf" class="button icon fa-download" target="_blank">Details</a></td>
 		</tr>
 		<tr>
 			<td>DataScientist</td>
 			<td>Intern</td>
-			<td><a href="jobs/DataScientist(intern).pdf" class="button icon fa-download" target="_blank">Details</a></td>
+			<td><a href="jobs/DataScientist(Intern).pdf" class="button icon fa-download" target="_blank">Details</a></td>
 		</tr>
 		<tr>
 			<td>Business Developer</td>
 			<td>Intern</td>
-			<td><a href="jobs/BusinessDeveloper(intern).pdf" class="button icon fa-download" target="_blank">Details</a></td>
+			<td><a href="jobs/BusinessDeveloper(Intern).pdf" class="button icon fa-download" target="_blank">Details</a></td>
 		</tr>
 	</tbody>
 </table>
